--- a/Task1_2_Exploratory_Data_Analysis(EDA).ipynb
+++ b/Task1_2_Exploratory_Data_Analysis(EDA).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO/tQuxLol38HUZJyaNAOfn",
+      "authorship_tag": "ABX9TyN8i8G9mNfSTZOGSl5ncuR1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6764,6 +6764,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Best regards,<br>\n",
+        "<b>Lakshya Sharma</b><br>\n",
+        "{Last Updated: 21/10/2023 7:16pm}\n"
+      ],
+      "metadata": {
+        "id": "pPITR8Bae7-T"
+      }
     }
   ]
 }
