--- a/Task1_1_Exploratory_Data_Analysis(EDA).ipynb
+++ b/Task1_1_Exploratory_Data_Analysis(EDA).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMyodB4VApjZJIHfTs8lGL9",
+      "authorship_tag": "ABX9TyMFI6pd/UEBD8xVckz0b7k1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# MLCOE Task 1.1 - Exploratory Data Analysis(EDA)\n",
+        "# MLCOE Task 1.1 - Exploratory Data Analysis(EDA) [Self-Choose DataSet]\n",
         "$\\textrm{Lakshya Sharma} $\n",
         "\n",
         "<details><summary>what is EDA?</summary>\n",
@@ -88,7 +88,7 @@
           "height": 424
         },
         "id": "55tPbjZSGREa",
-        "outputId": "8b426369-57ef-4649-ea5f-42ebb3390097"
+        "outputId": "d9c3a7cb-6cc3-4ce9-b2b5-c5c0130beab7"
       },
       "execution_count": 2,
       "outputs": [
@@ -113,7 +113,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5c03dd5f-b09f-44f4-869b-61253210fdb2\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-554bbd40-0897-44b8-9f5f-9b1be2c77fe3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -223,7 +223,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5c03dd5f-b09f-44f4-869b-61253210fdb2')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-554bbd40-0897-44b8-9f5f-9b1be2c77fe3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -275,12 +275,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5c03dd5f-b09f-44f4-869b-61253210fdb2 button.colab-df-convert');\n",
+              "        document.querySelector('#df-554bbd40-0897-44b8-9f5f-9b1be2c77fe3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5c03dd5f-b09f-44f4-869b-61253210fdb2');\n",
+              "        const element = document.querySelector('#df-554bbd40-0897-44b8-9f5f-9b1be2c77fe3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -300,8 +300,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-3aae9d71-d879-4d8d-aaa0-08df82274dfe\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3aae9d71-d879-4d8d-aaa0-08df82274dfe')\"\n",
+              "<div id=\"df-6b6b26aa-542c-4569-99d7-c2e0174e8bdd\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6b6b26aa-542c-4569-99d7-c2e0174e8bdd')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -420,7 +420,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-3aae9d71-d879-4d8d-aaa0-08df82274dfe button');\n",
+              "        document.querySelector('#df-6b6b26aa-542c-4569-99d7-c2e0174e8bdd button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -446,9 +446,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6LbhlV2AH_Iy",
-        "outputId": "1d0d3867-c5de-4714-b0d1-90aeb83bf5f7"
+        "outputId": "a37875b3-880b-4a8a-c3a4-4e8ad4fb4de7"
       },
-      "execution_count": 63,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -464,7 +464,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 63
+          "execution_count": 3
         }
       ]
     },
@@ -478,9 +478,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CEsSRbj5_IKP",
-        "outputId": "c126cae3-00e9-48c4-ddf9-a5f77a3e9225"
+        "outputId": "17488c9f-9fad-4b2d-93ba-e149368c3326"
       },
-      "execution_count": 64,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -492,7 +492,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 64
+          "execution_count": 4
         }
       ]
     },
@@ -513,7 +513,7 @@
       "metadata": {
         "id": "s1t5wgLQ9Msn"
       },
-      "execution_count": 65,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -524,7 +524,7 @@
       "metadata": {
         "id": "QpIxQhxR9pD2"
       },
-      "execution_count": 66,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -538,9 +538,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nu2S0IPtsrmg",
-        "outputId": "3a017c55-7d2a-4b1d-f46f-a2877fd0a8b9"
+        "outputId": "81b32721-9b6a-4ca7-bacc-5970d4c8173e"
       },
-      "execution_count": 68,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -566,9 +566,9 @@
           "height": 472
         },
         "id": "davJCxnRUQdW",
-        "outputId": "525353a4-5a99-487b-8069-4556333e9122"
+        "outputId": "80c31917-ef02-46cd-e796-ba12a6c32825"
       },
-      "execution_count": 133,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -613,7 +613,7 @@
       "metadata": {
         "id": "uO5dFAN8H9It"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -644,7 +644,7 @@
       "metadata": {
         "id": "j_NJOrtEKeZc"
       },
-      "execution_count": 78,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -655,7 +655,7 @@
       "metadata": {
         "id": "_srQZxWQL97z"
       },
-      "execution_count": 79,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -668,9 +668,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nyNoEIJhMDNP",
-        "outputId": "5a2c3bb0-10a6-480b-ce93-4f82c5fd2c15"
+        "outputId": "75041f45-94e5-4164-a5f5-79b5ff01ce70"
       },
-      "execution_count": 80,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -686,7 +686,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 80
+          "execution_count": 12
         }
       ]
     },
@@ -716,9 +716,9 @@
           "height": 489
         },
         "id": "ERxWF5ZmMHgu",
-        "outputId": "85d6a47e-b2b9-4ecf-9e6e-207128caaef4"
+        "outputId": "93f4a656-473f-4fda-9a1c-13a9982571f7"
       },
-      "execution_count": 132,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,9 +765,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wnDg0Ch6NWQI",
-        "outputId": "a0dd82d5-95b2-44bd-ec9a-1a2dd5872da4"
+        "outputId": "d3257bf8-c17a-45c6-a4d2-a538c698eeef"
       },
-      "execution_count": 107,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -5792,9 +5792,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ssiuyZr47xy5",
-        "outputId": "99068349-03df-4956-8386-d1bddb86d076"
+        "outputId": "4f06db3e-5514-4c7c-db0a-91311b935b53"
       },
-      "execution_count": 119,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -5834,9 +5834,9 @@
           "height": 472
         },
         "id": "rRyk_7n8XVxF",
-        "outputId": "9bfeef7c-7f74-4a15-bd96-b1bf3cf677ba"
+        "outputId": "283699bd-0915-4141-fefb-cddef9da08df"
       },
-      "execution_count": 123,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5863,9 +5863,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
-        "outputId": "b82ad3c2-61db-44ce-acc7-ac51f0f41969"
+        "outputId": "36733a21-ab74-4131-8fd9-e0c14218dd1c"
       },
-      "execution_count": 124,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5901,7 +5901,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-005f4466-43ed-45f3-b265-245850a293b9\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-861e1dcb-085f-477e-8fdc-0e77f4370f2f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -5999,7 +5999,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-005f4466-43ed-45f3-b265-245850a293b9')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-861e1dcb-085f-477e-8fdc-0e77f4370f2f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -6051,12 +6051,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-005f4466-43ed-45f3-b265-245850a293b9 button.colab-df-convert');\n",
+              "        document.querySelector('#df-861e1dcb-085f-477e-8fdc-0e77f4370f2f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-005f4466-43ed-45f3-b265-245850a293b9');\n",
+              "        const element = document.querySelector('#df-861e1dcb-085f-477e-8fdc-0e77f4370f2f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -6076,8 +6076,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f0aff810-2da3-4fca-b54a-ee99b3cb38f1\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f0aff810-2da3-4fca-b54a-ee99b3cb38f1')\"\n",
+              "<div id=\"df-c6c419a3-3f22-4d08-929d-95402f4d58bd\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c6c419a3-3f22-4d08-929d-95402f4d58bd')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -6196,7 +6196,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f0aff810-2da3-4fca-b54a-ee99b3cb38f1 button');\n",
+              "        document.querySelector('#df-c6c419a3-3f22-4d08-929d-95402f4d58bd button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -6207,7 +6207,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 124
+          "execution_count": 17
         }
       ]
     },
@@ -6222,9 +6222,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2ZWJ0XeQf4Uq",
-        "outputId": "e9659a90-4a55-4cd7-b103-e98bd176bbad"
+        "outputId": "2df78b45-5f15-48d5-c3f9-f58f9e4d2307"
       },
-      "execution_count": 125,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6240,7 +6240,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 125
+          "execution_count": 18
         }
       ]
     },
@@ -6256,7 +6256,7 @@
       "metadata": {
         "id": "XML0BCHAhXzf"
       },
-      "execution_count": 126,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -6269,9 +6269,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ocxw1yi-ivC9",
-        "outputId": "d6b86e54-b4c5-4941-c051-188653f48bca"
+        "outputId": "13b4a9ab-0edb-4a14-c2bb-b338d554cfa9"
       },
-      "execution_count": 127,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6291,7 +6291,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 127
+          "execution_count": 20
         }
       ]
     },
@@ -6311,9 +6311,9 @@
           "height": 472
         },
         "id": "M7kd4SuBe598",
-        "outputId": "bdef4756-de92-457d-f586-27e291eec719"
+        "outputId": "0a052ca8-447e-47f0-c62c-675fea369223"
       },
-      "execution_count": 131,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
